--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "is-mobile": "^4.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-visibility-sensor": "^5.1.1",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2"
   },
