--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "is-mobile": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-swipeable": "^7.0.1",
     "react-visibility-sensor": "^5.1.1",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2"
