--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.23.1",
     "react-swipeable": "^7.0.1",
     "react-visibility-sensor": "^5.1.1",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2"
   },
