--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-visibility-sensor": "^5.1.1",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.11",
-    "styled-reset": "^4.5.2"
+    "styled-reset": "^4.5.2",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
