--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "is-mobile": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
